# deepsleep

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  settings.yaml
dev/: get_data.py  upload_data_to_drive.py  utils.py
src/: Models.py  Sound.py  dataset.py  display.py  metamodel.py  models.py  sound.py
