[tool.poetry]
name = "deepsleep"
version = "0.1.0"
description = "Sleep analysis using deep learning"
authors = [
    "Aurélien Gauffre <aurelien.gauffre@gmail.com>",
    "Pierre Guilmin <pierre.guilmin@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.6.9"
numpy = "^1.18.3"
pandas = "^1.0.0"
matplotlib = "^3.2.1"
librosa = "^0.7.2"
# specific installation for Windows, see CONTRIBUTING.md
torch = { version = "^1.5.0", markers = "sys_platform != 'win32'" }
numba = "0.48.0" #last version 0.49.0 is throwing warnings
jupyter = "^1.0.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
gdown = "3.10.2"
colorama = "^0.4.3"
pydrive = "^1.3.1"
black = "^19.10b0"
isort = "^4.3.21"

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py38']

[tool.isort]
multi_line_output = 3 # to be consistent with black formatting
include_trailing_comma = true # to be consistent with black formatting
